Deployment optimization: Configured backend for Railway persistence, dynamically assigned ports, and relaxed CORS for Vercel integration.